tests/snapshots/cli__bad_filename_casing.snap
---
source: tests/cli.rs
expression: check(stringify! (bad_filename_casing))
---
exit: 1
error[naming]: `LoginHandler.py` is not snake_case
  --> src/features/auth/functions/LoginHandler.py
   |
   = rename to login_handler.py

checked 1 file -- 1 violation
