tests/snapshots/cli__class_in_functions.snap
---
source: tests/cli.rs
expression: check(stringify! (class_in_functions))
---
exit: 1
error[kind]: `Credentials` denotes a type but lives in functions/
  --> src/features/auth/functions/credentials.py:1
   |
   = move to src/features/auth/types/credentials.py

checked 1 file -- 1 violation
