tests/snapshots/cli__conflicting_rename.snap
---
source: tests/cli.rs
expression: check(stringify! (conflicting_rename))
---
exit: 1
error[naming]: file name does not match public name `process`
  --> src/features/auth/functions/Foo-Bar.py:1
   |
   = rename to process.py

checked 1 file -- 1 violation
