tests/snapshots/cli__custom_roots.snap
---
source: tests/cli.rs
expression: check(stringify! (custom_roots))
---
exit: 0
checked 2 files -- no violations
