tests/snapshots/cli__default_exceptions.snap
---
source: tests/cli.rs
expression: check(stringify! (default_exceptions))
---
exit: 0
checked 10 files -- no violations
