tests/snapshots/cli__defaults_are_printable.snap
---
source: tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[roots]
src = "python"
tests = "python"

[python]
one_per_file = [
    "def",
    "class",
]
max_file_lines = 200
max_folder_depth = 3
name_case = "snake_case"

[[python.exceptions]]
path = "**/__init__.py"
waive = ["filename_matches_export"]
reason = "Python requires package markers at every level"

[[python.exceptions]]
path = "**/__main__.py"
waive = ["filename_matches_export"]
reason = "Python requires this exact filename for `python -m pkg`"

[[python.exceptions]]
path = "tests/**"
waive = ["single_primary_export"]
reason = "a test module holds many test functions by design"

[rust]
one_per_file = [
    "fn",
    "struct",
    "enum",
    "trait",
]
max_file_lines = 200
max_folder_depth = 3
name_case = "snake_case"

[[rust.exceptions]]
path = "**/mod.rs"
waive = ["filename_matches_export"]
reason = "Rust requires this exact filename for a module"

[[rust.exceptions]]
path = "{root}/lib.rs"
waive = ["filename_matches_export"]
reason = "cargo requires this exact filename"

[[rust.exceptions]]
path = "{root}/main.rs"
waive = ["filename_matches_export"]
reason = "cargo requires this exact filename"
