tests/snapshots/cli__happy_path.snap
---
source: tests/cli.rs
expression: check(stringify! (happy_path))
---
exit: 0
checked 6 files -- no violations
