tests/snapshots/cli__invalid_syntax.snap
---
source: tests/cli.rs
expression: check(stringify! (invalid_syntax))
---
exit: 1
error[content]: could not parse this file
  --> src/features/auth/functions/broken.py
   |
   | its contents are not checked; fix the syntax error first

checked 1 file -- 1 violation
